# Cypher

./: .gitignore  play808.py  pyproject.toml
.claude/plans/: sampler_bpm_matching.md
cypher/: __init__.py  engine.py  midi.py  midi_input.py  render.py
cypher/core/: __init__.py  envelope.py  filters.py  lfo.py  metronome.py  oscillator.py  parameter.py  project.py  reverb.py  types.py  voice.py  waveshaper.py
cypher/drum/: __init__.py  kick.py  sub808.py
cypher/fx/: __init__.py  fx.py
cypher/sampler/: __init__.py  freeze.py  gross_beat.py  loader.py  pitch_shift.py  sampler.py  sidecar.py  tempo.py
cypher/synth/: __init__.py  chord_engine.py  chords.py  mono.py  poly.py
native/: alsa_test.c  audio_test.c  sine_test.c
native/src/: Makefile  chords.h  envelope.h  filter.h  freeze.c  freeze.h  gross_beat.c  gross_beat.h  kick.c  kick.h  main.c  oscillator.h  parameter.h  pitch_shift.c  pitch_shift.h  reverb.c  reverb.h  sampler.c  sampler.h  sub808.c  sub808.h  synth.c  synth.h  types.h  wav_loader.c  wav_loader.h
tests/: conftest.py  test_chord_engine.py  test_engine.py  test_envelope.py  test_freeze.py  test_fx.py  test_gross_beat.py  test_kick.py  test_lfo.py  test_mono_synth.py  test_oscillator.py  test_parameter.py  test_pitch_shift.py  test_poly_synth.py  test_project.py  test_reverb.py  test_sampler.py  test_sub808.py
