[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cypher"
version = "0.1.0"
description = "CYPHER Drum Designer — trap-focused synthesized drum engine"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
]

[project.optional-dependencies.midi]
mido = ["mido", "python-rtmidi"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
